feat: update bootstrap init settings

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,4 @@
-@charset "utf-8";
+@charset 'utf-8';
 
 @import 'components/fonts';
 
@@ -6,15 +6,11 @@
 @import 'mixins';
 @import 'keyframes';
 
-// Reset in case we need to reset badges
-// @mixin badge-variant($bg) {
-// }
-
 // Optional
-@import '~bootstrap/scss/root';
-@import '~bootstrap/scss/reboot';
+// Layout & components
 @import '~bootstrap/scss/type';
-// @import '~bootstrap/scss/code';
+// @import '~bootstrap/scss/images';
+// @import '~bootstrap/scss/containers';
 // @import '~bootstrap/scss/grid';
 // @import '~bootstrap/scss/tables';
 // @import '~bootstrap/scss/forms';
@@ -22,18 +18,15 @@
 // @import '~bootstrap/scss/transitions';
 // @import '~bootstrap/scss/dropdown';
 // @import '~bootstrap/scss/button-group';
-// @import '~bootstrap/scss/input-group';
-// @import '~bootstrap/scss/custom-forms';
 @import '~bootstrap/scss/nav';
 // @import '~bootstrap/scss/navbar';
 // @import '~bootstrap/scss/card';
+// @import '~bootstrap/scss/accordion';
 // @import '~bootstrap/scss/breadcrumb';
 // @import '~bootstrap/scss/pagination';
 // @import '~bootstrap/scss/badge';
-// @import '~bootstrap/scss/jumbotron';
 // @import '~bootstrap/scss/alert';
 // @import '~bootstrap/scss/progress';
-// @import '~bootstrap/scss/media';
 // @import '~bootstrap/scss/list-group';
 // @import '~bootstrap/scss/close';
 // @import '~bootstrap/scss/toasts';
@@ -42,9 +35,15 @@
 // @import '~bootstrap/scss/popover';
 // @import '~bootstrap/scss/carousel';
 // @import '~bootstrap/scss/spinners';
-// @import '~bootstrap/scss/utilities'; // import custom utilities if needed
-// @import '~bootstrap/scss/print';
-// @import '~bootstrap/scss/images';
+// @import '~bootstrap/scss/offcanvas';
+// @import '~bootstrap/scss/placeholders';
+
+// Helpers
+// @import '~bootstrap/scss/helpers';
+
+// Utilities
+// @import '~bootstrap/scss/utilities';
+// @import '~bootstrap/scss/utilities/api';
 
 // Components
 @import 'components/base';
